# wind_rose

./: .gitignore  .pre-commit-config.yaml  README.md  data_example.py  data_example.txt  main.py  mypy.ini  pip_install.sh  purge_cache.sh  pyproject.toml  requirenments.txt  weeks.py
wind_rose/: __init__.py  config.py  tracker.py
wind_rose/plots/: __init__.py  comparison.py  radar.py  summary.py
